--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -10,7 +10,7 @@ jobs:
       with:
         go-version: 1.14
     - name: Generate coverage report
-      run: go test -race -coverprofile=coverage.txt -covermode=atomic
+      run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
